# tiny-package-manager

./: README.md  pyproject.toml  relative_package
resources/: api-easy  express-resource  jest-0.0.71.json  jest-0.0.71.tgz  lingo  pluralize-mongoose  response-send  sji  vows
src/tiny_package_manager/: app.py  app_test.py  base.py  reference.py  reference_test.py  utils.py  utils_test.py
