[project]
name = "tiny-package-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hangyudu", email = "hangyudu@tencent.com" }
]
requires-python = ">=3.9"
dependencies = [
    "semver>=3.0.4",
    "semver-range>=0.0.3",
]

[project.scripts]
tiny-package-manager = "tiny_package_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
